@@ -75,6 +75,8 @@ Optimizations
 * GITHUB#13943: Removed shared `HitsThresholdChecker`, which reduces overhead
   but may delay a bit when dynamic pruning kicks in. (Adrien Grand)
 
+* GITHUB#13961: Replace Map<String,Object> with IntObjectHashMap for DV producer. (Pan Guixin)
+
 Bug Fixes
 ---------------------
 * GITHUB#13832: Fixed an issue where the DefaultPassageFormatter.format method did not format passages as intended
